@@ -24,10 +24,10 @@ returns an object of class \code{import.spc}, which is a list with the following
   \item{xreg}{the call to retrieve the data for the \code{xreg} series (if required by the call)}
 }
 \description{
-Utility function to import \code{.spc}
-files from X-13. It generates a list of calls to \code{seas} (and 
-\code{import.ts}) that can be run in R, which should be 
-equivalent to the original \code{.spc} file. The print method displays the calls in a way that they can
+Utility function to import \code{.spc} files from X-13. It generates a list
+of calls to \code{seas} (and  \code{import.ts}) that can be run in R.
+Evaluating these calls should perform the same operations as the orginal
+\code{.spc} file. The print method displays the calls in a way that they can
 be copy-pasted into an R script.
 }
 \examples{
@@ -36,7 +36,10 @@ be copy-pasted into an R script.
 import.spc(system.file("tests", "Testairline.spc", package="seasonal"))
 
 \dontrun{
-# a spc with multiple user defined regression and transformation series
+
+### reading .spc with multiple user regression and transformation series
+
+# running a complex seas call and save output in a temporary directory
 tdir <- tempdir()
 seas(x = AirPassengers, xreg = cbind(a = genhol(cny, start = 1, end = 4,
     center = "calendar"), b = genhol(cny, start = -3, end = 0,
@@ -44,11 +47,26 @@ seas(x = AirPassengers, xreg = cbind(a = genhol(cny, start = 1, end = 4,
     transform.function = "log", transform.type = "temporary", 
     regression.aictest = "td", regression.usertype = "holiday", dir = tdir, 
     out = TRUE)
-ii <- import.spc(file.path(tdir, "iofile.spc"))
-ii  # list with 4 calls (3 series import, 1 main call)
 
-# evaluating the imported calls in R
-ee <- lapply(ii, eval, envir = globalenv())
+# importing the spc file from there
+ll <- import.spc(file.path(tdir, "iofile.spc"))
+
+# ll is list with 4 calls: 
+# - 3 calls to import.ts(), which read the series from the X-13 data files
+# - and 1 call to seas() which performs the adjustment in R
+str(ll)
+
+# to replicate the original X-13 operation, run all 4 calls. You can either
+# copy/paste and run the print() output:
+ll
+
+# or use eval() to evaluate the call. This evaluates the first call and
+# imports the x variable:
+eval(ll$x)
+
+# to run all 4 calls, use lapply() and eval() to evaluate all calls in the
+# list:
+ee <- lapply(ll, eval, envir = globalenv())
 ee$call  # the 'seas' object produced from the .spc file
 }
 }
